--- a/kasambahayko/pubspec.yaml
+++ b/kasambahayko/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   im_stepper: ^1.0.1+1
   carousel_slider: ^4.2.1
   image_picker: ^1.0.4
+  file_picker: ^6.1.1
   intl: ^0.18.1
   mysql1: ^0.20.0
   http: ^1.1.0
@@ -26,6 +27,9 @@ dependencies:
   conditional_builder_null_safety: ^0.0.6
   multiselect: ^0.1.0
   path: ^1.8.3
+  url_launcher: ^6.2.1
+  timeline_tile: ^2.0.0
+  timeago: ^3.6.0
 
 dev_dependencies:
   flutter_test:
