--- a/kasambahayko/pubspec.yaml
+++ b/kasambahayko/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   url_launcher: ^6.2.1
   timeline_tile: ^2.0.0
   timeago: ^3.6.0
+  photo_view: ^0.14.0
+  path_provider: ^2.1.1
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
