--- a/kasambahayko/pubspec.yaml
+++ b/kasambahayko/pubspec.yaml
@@ -23,7 +23,6 @@ dependencies:
   dio: ^5.3.3
   multiselect: ^0.1.0
   path: ^1.8.3
-  # url_launcher: ^6.2.1
   timeline_tile: ^2.0.0
   timeago: ^3.6.0
   photo_view: ^0.14.0
@@ -31,6 +30,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   socket_io_client: ^2.0.3+1
   zego_uikit_prebuilt_call: ^4.1.6
+  url_launcher: ^6.0.6
 
 dev_dependencies:
   flutter_test:
